--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,7 +18,9 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "less": "^4.1.3",
     "typescript": "^4.6.4",
+    "typescript-plugin-css-modules": "^3.4.0",
     "vite": "^3.2.3"
   }
 }
