build: 增加创建组件的脚本

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "new": "node ./scripts/newComponent"
   },
   "dependencies": {
     "@preact/signals-react": "^1.2.1",
