--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,7 +13,8 @@
     "@preact/signals-react": "^1.2.1",
     "@werewolf/shared": "workspace:*",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
