--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,15 +10,18 @@
     "new": "node ./scripts/newComponent"
   },
   "dependencies": {
+    "@loadable/component": "^5.15.3",
     "@preact/signals-react": "^1.2.1",
     "@werewolf/shared": "workspace:*",
     "axios": "^1.2.3",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
+    "@types/loadable__component": "^5.13.4",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
