--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,12 +18,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
+    "sha256": "^0.2.0",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/loadable__component": "^5.13.4",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/sha256": "^0.2.0",
     "@vitejs/plugin-react": "^2.2.0",
     "less": "^4.1.3",
     "typescript": "^4.6.4",
