--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,6 +13,7 @@
     "@loadable/component": "^5.15.3",
     "@preact/signals-react": "^1.2.1",
     "@werewolf/shared": "workspace:*",
+    "@werewolf/mock": "workspace:*",
     "axios": "^1.2.3",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
