--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@loadable/component": "^5.15.3",
     "@preact/signals-react": "^1.2.1",
-    "@werewolf/shared": "workspace:*",
     "@werewolf/mock": "workspace:*",
+    "@werewolf/shared": "workspace:*",
     "axios": "^1.2.3",
     "classnames": "^2.3.2",
+    "easyqrcodejs": "^4.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
