--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,12 +20,13 @@
     "tsconfig-paths": "^4.1.0"
   },
   "dependencies": {
-    "@werewolf/shared": "workspace:*",
     "@koa/cors": "^4.0.0",
+    "@werewolf/shared": "workspace:*",
     "koa": "^2.13.4",
     "koa-body": "^6.0.1",
     "koa-logger": "^3.2.1",
     "koa-router": "^12.0.0",
+    "nanoid": "^4.0.1",
     "socket.io": "^4.5.3"
   }
 }
