--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,7 +18,8 @@
     "nodemon": "^1.19.4",
     "pm2": "^3.5.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0"
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "@koa/cors": "^4.0.0",
