--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -21,10 +21,12 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "sha256": "^0.2.0",
+    "socket.io-client": "^4.0.0",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/loadable__component": "^5.13.4",
+    "@types/socket.io-client": "^1.4.36",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@types/sha256": "^0.2.0",
