--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "set DEV=true && nodemon",
     "build": "rm -rf dist && tsc"
   },
   "author": "",
